--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,23 +1,6 @@
 @import '~normalize.css/normalize.css';
-
-html,
-body {
-  font-size: 16px;
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-}
-
-#nav {
-  padding: 2rem;
-  a {
-    font-weight: bold;
-    color: #2c3e50;
-
-    &.router-link-exact-active {
-      color: #42b983;
-    }
-  }
-}
+@import '_variables.scss';
+@import '_mixins.scss';
+@import '_base.scss';
+@import '_layout.scss';
+@import '_components.scss';
