fix: Improve login

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,9 +3,13 @@ $code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
 
 $text-color: rgb(34, 34, 34) !default;
 $brand-color: rgb(24,167,82) !default;
+
 $light-grey: rgb(237, 237, 237) !default;
 $mid-grey: rgb(153, 153, 153) !default;
 $dark-grey: rgb(68, 68, 68) !default;
+
+$mid-red: rgb(220,34,59) !default;
+
 $max-width: 1180px !default;
 $breakpoints: (
   'small': 320px,
@@ -17,3 +21,9 @@ $breakpoints: (
 /// @example scss - When using a CDN
 ///   $base-url: 'http://cdn.example.com/assets/';
 $base-url: '/assets/' !default;
+
+
+//================= Helpers ==================================//
+.text-danger {
+  color: $mid-red;
+}
